# minja-interop

./: CMakeLists.txt  README.md  build.cmd  build.sh  minja-interop.cpp
